fixed ship overlap and multiple placement

--- a/src/main/resources/static/web/styles/game.css
+++ b/src/main/resources/static/web/styles/game.css
@@ -17,9 +17,16 @@ body, h1 {
 .cell_yellow {
     background-color: yellow;
 }
-.shipDemo {
+.shipsToPlace {
     width: 50px;
     height: 50px;
     background: yellow;
+    border: 1px solid grey;
+}
+
+.shipsPlaced {
+    width: 50px;
+    height: 50px;
+    background: white;
     border: 1px solid grey;
 }
